First Commit Remove search, remove darkmode add French content

--- a/src/layouts/components/BlogCard.astro
+++ b/src/layouts/components/BlogCard.astro
@@ -25,7 +25,7 @@ const modifiedSlug = slugParts.join("/");
 data.slug = modifiedSlug;
 ---
 
-<div class="bg-body dark:bg-darkmode-body">
+<div class="bg-body">
   {
     image && (
       <ImageMod
