--- a/src/layouts/PostSingle.astro
+++ b/src/layouts/PostSingle.astro
@@ -23,7 +23,7 @@ if (!lang) {
 
 const posts = await getSinglePage(
   COLLECTION_FOLDER,
-  lang as keyof ContentEntryMap
+  lang as keyof ContentEntryMap,
 );
 const similarPosts = similarItems(post, posts);
 const { Content } = await post.render();
@@ -85,7 +85,7 @@ const { title, description, author, categories, image, date, tags } = post.data;
                 tags.map((tag: string) => (
                   <li class="inline-block">
                     <a
-                      class="m-1 block rounded bg-theme-light px-3 py-1 hover:bg-primary hover:text-white dark:bg-darkmode-theme-light dark:hover:bg-darkmode-primary dark:hover:text-dark"
+                      class="m-1 block rounded bg-theme-light px-3 py-1 hover:bg-primary hover:text-white   "
                       href={slugSelector(`/tags/${slugify(tag)}`, lang)}
                     >
                       {humanize(tag)}
