--- a/src/layouts/components/Breadcrumbs.astro
+++ b/src/layouts/components/Breadcrumbs.astro
@@ -41,11 +41,11 @@ paths.forEach((label: string, i: number) => {
         <li class="mx-1 capitalize" role="listitem">
           {index > 0 && <span class="inline-block mr-1">/</span>}
           {index !== parts.length - 1 ? (
-            <a class="text-primary dark:text-darkmode-primary" {...attrs}>
+            <a class="text-primary " {...attrs}>
               {label}
             </a>
           ) : (
-            <span class="text-light dark:text-darkmode-light">{label}</span>
+            <span class="text-light ">{label}</span>
           )}
         </li>
       ))
