--- a/src/layouts/components/Pagination.astro
+++ b/src/layouts/components/Pagination.astro
@@ -34,10 +34,10 @@ for (let i = 1; i <= totalPages; i++) {
               ? slugSelector(`/${section ? section : ""}`, lang)
               : slugSelector(
                   `/${section ? section : ""}/page/${currentPage - 1}`,
-                  lang
+                  lang,
                 )
           }
-          class="rounded px-2 py-1.5 text-dark hover:bg-theme-light dark:text-darkmode-dark dark:hover:bg-darkmode-theme-light"
+          class="rounded px-2 py-1.5 text-dark hover:bg-theme-light  "
         >
           <span class="sr-only">Previous</span>
           <svg
@@ -78,7 +78,7 @@ for (let i = 1; i <= totalPages; i++) {
         pagination === currentPage ? (
           <span
             aria-current="page"
-            class="rounded bg-primary px-4 py-2 text-white dark:bg-darkmode-primary dark:text-dark"
+            class="rounded bg-primary px-4 py-2 text-white  "
           >
             {pagination}
           </span>
@@ -88,14 +88,14 @@ for (let i = 1; i <= totalPages; i++) {
               i === 0
                 ? `/${section ? section : ""}`
                 : `/${section ? section : ""}/page/${pagination}`,
-              lang
+              lang,
             )}
             aria-current="page"
-            class="rounded px-4 py-2 text-dark hover:bg-theme-light dark:text-darkmode-dark dark:hover:bg-darkmode-theme-light"
+            class="rounded px-4 py-2 text-dark hover:bg-theme-light  "
           >
             {pagination}
           </a>
-        )
+        ),
       )}
 
       {/* next page */}
@@ -103,9 +103,9 @@ for (let i = 1; i <= totalPages; i++) {
         <a
           href={slugSelector(
             `/${section ? section : ""}/page/${currentPage + 1}`,
-            lang
+            lang,
           )}
-          class="rounded px-2 py-1.5 text-dark hover:bg-theme-light dark:text-darkmode-dark dark:hover:bg-darkmode-theme-light"
+          class="rounded px-2 py-1.5 text-dark hover:bg-theme-light  "
         >
           <span class="sr-only">Next</span>
           <svg
