--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -19,7 +19,7 @@ if (menu) {
 }
 ---
 
-<footer class="bg-theme-light dark:bg-darkmode-theme-light">
+<footer class="bg-theme-light">
   <div class="container">
     <div class="row items-center py-10">
       <div class="mb-8 text-center lg:col-3 lg:mb-0 lg:text-left">
@@ -41,8 +41,8 @@ if (menu) {
       </div>
     </div>
   </div>
-  <div class="border-t border-border py-7 dark:border-darkmode-border">
-    <div class="container text-center text-light dark:text-darkmode-light">
+  <div class="border-t border-border py-7">
+    <div class="container text-center text-light">
       <p set:html={markdownify(config.params.copyright)} />
     </div>
   </div>
