--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -1,6 +1,6 @@
 ---
 import Logo from "@/components/Logo.astro";
-import ThemeSwitcher from "@/components/ThemeSwitcher.astro";
+
 import config from "@/config/config.json";
 import LanguageSwitcher from "@/helpers/LanguageSwitcher";
 import {
@@ -9,15 +9,16 @@ import {
   slugSelector,
 } from "@/lib/utils/languageParser";
 import type { ContentEntryMap } from "astro:content";
-import { IoSearch } from "react-icons/io5";
+
 
 let lang = getLangFromUrl(Astro.url);
 const menu = await getTranslations(lang as keyof ContentEntryMap);
 
-const { navigation_button, settings } = config;
+const { book_now_button, settings } = config;
 const { default_language } = config.settings;
 const { pathname } = Astro.url;
-const { get_started } = await getTranslations(lang as keyof ContentEntryMap);
+const { book_now } = await getTranslations(lang as keyof ContentEntryMap);
+const { header_title } = await getTranslations(lang as keyof ContentEntryMap);
 
 const disabledLanguages = config.settings.disable_languages as string[];
 if (disabledLanguages.includes(lang)) {
@@ -29,13 +30,18 @@ if (disabledLanguages.includes(lang)) {
   <nav class="navbar container">
     {/* logo */}
     <div class="order-0">
-      <Logo />
+     <!--  <Logo />     -->
+     {header_title}
+    
     </div>
+
+
+    
     {/* navbar toggler */}
     <input id="nav-toggle" type="checkbox" class="hidden" />
     <label
       for="nav-toggle"
-      class="order-3 cursor-pointer flex items-center lg:hidden text-dark dark:text-white lg:order-1"
+      class="order-3 cursor-pointer flex items-center lg:hidden text-dark lg:order-1"
     >
       <svg id="show-button" class="h-6 fill-current block" viewBox="0 0 20 20">
         <title>Menu Open</title>
@@ -108,13 +114,13 @@ if (disabledLanguages.includes(lang)) {
       }
       {/* Navigation button */}
       {
-        navigation_button.enable && (
+        book_now_button.enable && (
           <li class="mt-4 inline-block lg:hidden">
             <a
               class="btn btn-outline-primary btn-sm"
-              href={navigation_button.link}
+              href={book_now_button.link}
             >
-              {get_started}
+              {book_now}
             </a>
           </li>
         )
@@ -122,32 +128,19 @@ if (disabledLanguages.includes(lang)) {
     </ul>
 
     <div class="order-1 ml-auto flex items-center md:order-2 lg:ml-0">
-      {/* Search button */}
-      {
-        settings.search && (
-          <button
-            class="border-border text-dark hover:text-primary dark:border-darkmode-border mr-5 inline-block border-r pr-5 text-xl dark:text-white dark:hover:text-darkmode-primary"
-            aria-label="search"
-            data-search-trigger
-          >
-            <IoSearch />
-          </button>
-        )
-      }
-      {/* Theme switcher */}
-      <ThemeSwitcher className="mr-5" />
+
 
       {/* Language switcher */}
       <LanguageSwitcher client:load lang={lang} pathname={pathname} />
 
       {/* Navigation button */}
       {
-        navigation_button.enable && (
+        book_now_button.enable && (
           <a
             class="btn btn-outline-primary btn-sm hidden lg:inline-block"
-            href={navigation_button.link}
+            href={book_now_button.link}
           >
-            {get_started}
+            {book_now}
           </a>
         )
       }
