--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -17,6 +17,7 @@ let footer: any = [];
 if (menu) {
   footer = menu.footer;
 }
+const { seo_footer } = await getTranslations(lang as keyof ContentEntryMap);
 ---
 
 <footer class="bg-theme-light">
@@ -25,7 +26,13 @@ if (menu) {
       <div class="mb-8 text-center lg:col-3 lg:mb-0 lg:text-left">
         <Logo />
       </div>
-      <div class="mb-8 text-center lg:col-6 lg:mb-0">
+
+      
+      <div class="mb-8 text-center lg:col-8 lg:mb-0">
+      
+        {seo_footer}
+      
+      <!--
         <ul>
           {
             footer.map((menu: any) => (
@@ -36,9 +43,14 @@ if (menu) {
           }
         </ul>
       </div>
+
+
       <div class="mb-8 text-center lg:col-3 lg:mb-0 lg:mt-0 lg:text-right">
         <Social source={social.main} className="social-icons" />
       </div>
+-->
+    
+
     </div>
   </div>
   <div class="border-t border-border py-7">
