--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -44,6 +44,8 @@ const { villa_title, title, meta_title, description, image, noindex, canonical, 
 
 const language = lang || getLangFromUrl(Astro.url);
 
+const fullBookUrl = `${config.site.base_url}${config.book_now_button.link}`;
+
 const vacationRentalJsonLd = {
         "@context": "https://schema.org",
         "@type": "VacationRental",
@@ -104,16 +106,10 @@ const vacationRentalJsonLd = {
             "value": true
           }
         ],
-        "numberOfRooms": 5,
-        "numberOfBathroomsTotal": 3,
+        "numberOfRooms": 10,
         "maximumAttendeeCapacity": 10,
         "petsAllowed": false,
-        "tourBookingPage": "https://www.location-maison-mer.fr/reservation",
-        "host": {
-          "@type": "Person",
-          "name": "Jean-Marc LEGLISE",
-          "url": "https://www.location-maison-mer.fr/a-propos"
-        }
+        "tourBookingPage": fullBookUrl,
       }
 
 
