--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -86,26 +86,26 @@ const call_to_action = await getSinglePage(
  <div class="flex justify-center space-x-8">
   <!-- Bloc 1 -->
   <div class="flex items-center space-x-2">
-    <img src="/images/pax.svg" alt="10 Guests" class="w-10 h-10">
-    <span>10</span>
+    <span>10</span><img src="/images/pax.svg" alt="10 Guests" class="w-10 h-10">
+  
   </div>
   
   <!-- Bloc 2 -->
   <div class="flex items-center space-x-2">
-    <img src="/images/room.svg" alt="5 rooms" class="w-10 h-10">
-    <span>5</span>
+    <span>5</span><img src="/images/room.svg" alt="5 rooms" class="w-10 h-10">
+ 
   </div>
   
   <!-- Bloc 3 -->
   <div class="flex items-center space-x-2">
-    <img src="/images/logo.jpg" alt="XX" class="w-10 h-10">
-    <span>3</span>
+    <span>3</span>  <img src="/images/shower.png" alt="3 shower" class="w-6 h-9">
+
   </div>
   
   <!-- Bloc 4 -->
   <div class="flex items-center space-x-2">
-    <img src="/images/beach.svg" alt="beachfront" class="w-12 h-12">
-    <span></span>
+    <span></span><img src="/images/beach.svg" alt="beachfront" class="w-12 h-14">
+    
   </div>
 </div>
 
@@ -192,7 +192,7 @@ const call_to_action = await getSinglePage(
 -->
 
       <div class="lg:col-10 md:col-9 mb-8 text-center">
-        <h1
+        <h2
           set:html={markdownify(nous.title)}
           class="mb-4 text-h3 lg:text-h1"
         />
