--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -58,46 +58,12 @@ if (disabledLanguages.includes(lang)) {
 
     <ul
       id="nav-menu"
-      class="navbar-nav order-3 hidden w-full pb-6 lg:order-1 lg:flex lg:w-auto lg:space-x-2 lg:pb-0 xl:space-x-8"
+      class="navbar-nav order-3 hidden w-full pb-6 lg:order-1 lg:flex lg:w-auto lg:space-x-2 lg:pb-0 xl:space-x-8 xl:text-xl"
     >
       {
         menu?.main.map((menu: any) => (
           <>
-            {menu.hasChildren ? (
-              <li class="nav-item nav-dropdown group relative">
-                <span
-                  class={`nav-link inline-flex items-center ${
-                    menu.children
-                      ?.map(({ url }: { url: string }) =>
-                        slugSelector(url, lang),
-                      )
-                      .includes(pathname)
-                      ? "active"
-                      : ""
-                  }`}
-                >
-                  {menu.name}
-                  <svg class="h-4 w-4 fill-current" viewBox="0 0 20 20">
-                    <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
-                  </svg>
-                </span>
-                <ul class="nav-dropdown-list hidden group-hover:block lg:invisible lg:absolute lg:block lg:opacity-0 lg:group-hover:visible lg:group-hover:opacity-100">
-                  {menu.children?.map((child: any) => (
-                    <li class="nav-dropdown-item">
-                      <a
-                        href={slugSelector(child.url, lang)}
-                        aria-label={child.name}
-                        class={`nav-dropdown-link block ${
-                          pathname === slugSelector(child.url, lang) && "active"
-                        }`}
-                      >
-                        {child.name}
-                      </a>
-                    </li>
-                  ))}
-                </ul>
-              </li>
-            ) : (
+            {
               <li class="nav-item">
                 <a
                   href={slugSelector(menu.url, lang)}
@@ -105,15 +71,15 @@ if (disabledLanguages.includes(lang)) {
                     pathname === slugSelector(menu.url, lang) && "active"
                   }`}
                 >
-                  {menu.name}
+                 {menu.name}
                 </a>
               </li>
-            )}
+            }
           </>
         ))
       }
       {/* Navigation button */}
-      {
+      {/*
         book_now_button.enable && (
           <li class="mt-4 inline-block lg:hidden">
             <a
@@ -124,7 +90,7 @@ if (disabledLanguages.includes(lang)) {
             </a>
           </li>
         )
-      }
+      */}
     </ul>
 
     <div class="order-1 ml-auto flex items-center md:order-2 lg:ml-0">
@@ -138,7 +104,7 @@ if (disabledLanguages.includes(lang)) {
         book_now_button.enable && (
           <a
             class="btn btn-outline-primary btn-sm hidden lg:inline-block"
-            href={book_now_button.link}
+            href={slugSelector(book_now_button.link, lang)}
           >
             {book_now}
           </a>
