--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -33,6 +33,7 @@ export interface Props {
   title?: string;
   meta_title?: string;
   description?: string;
+  schemaVacationRental?: string;
   image?: string;
   noindex?: boolean;
   canonical?: string;
@@ -40,129 +41,23 @@ export interface Props {
 }
 
 // distructure frontmatters
-const { villa_title, title, meta_title, description, image, noindex, canonical, lang } = Astro.props;
+const {
+  villa_title,
+  title,
+  meta_title,
+  description,
+  schemaVacationRental,
+  image,
+  noindex,
+  canonical,
+  lang,
+} = Astro.props;
 
 const language = lang || getLangFromUrl(Astro.url);
 
 const fullBookUrl = `${config.site.base_url}${config.book_now_button.link}`;
 
-const vacationRentalJsonLd = {
-        "@context": "https://schema.org",
-        "@type": "VacationRental",
-        "name": config.site.villa_title,
-        "description": "Superbe maison de vacances en front de mer à Ouistreham, offrant une belle vue sur la mer et un accès direct à la plage de Riva Bella. Pour 10 personnes, 5 chambres, offrant tout le confort et l'équipement d'une véritable maison d'habitation.",
-        "url": "https://www.location-maison-mer.fr/",
-        "identifier": "villa-tamaris-ouistreham",
-        "image": "https://www.location-maison-mer.fr/images/villa_tamaris_ouistreham_vueFront.jpg",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "117 Boulevard Aristide Briand",
-          "addressLocality": "Ouistreham",
-          "postalCode": "14150",
-          "addressRegion": "Normandie",
-          "addressCountry": "France"
-        },
-        "geo": {
-          "@type": "GeoCoordinates",
-          "latitude": 49.29152,
-          "longitude": -0.27283
-        },
-        "containsPlace": [
-    {
-      "@type": "Room",
-      "name": "Chambre  1",
-      "description": "Chambre située au rez-de-chaussée. 1 grand lit."
-    },
-    {
-      "@type": "Room",
-      "name": "Chambre 2",
-      "description": "Chambre située au rez-de-chaussée. 1 grand lit."
-    },
-    {
-      "@type": "Room",
-      "name": "Chambre parentale",
-      "description": "Chambre parentale au 2e étage avec salle de douche et terrasse privatives. Formidable vue mer."
-    },
-    {
-      "@type": "Room",
-      "name": "Chambre 3",
-      "description": "Chambre située au 2e étage.Petite vue mer."
-    },
-    {
-      "@type": "Room",
-      "name": "Chambre 4",
-      "description": "Chambre située au 2e étage.Vue mer."
-    },
-    {
-      "@type": "Room",
-      "name": "Salon",
-      "description": "Salon spacieux au 1er étage avec vue sur la mer."
-    },
-    {
-      "@type": "Room",
-      "name": "Salle à manger",
-      "description": "Salle à manger adjacente au salon."
-    },
-    {
-      "@type": "Room",
-      "name": "Cuisine",
-      "description": "Cuisine entièrement équipée au 1er étage."
-    },
-    {
-      "@type": "Room",
-      "name": "Bureau",
-      "description": "Espace bureau avec connexion internet haut débit."
-    }
-  ],
-        "amenityFeature": [
-          {
-            "@type": "LocationFeatureSpecification",
-            "name": "Vue sur la mer",
-            "value": true
-          },
-          {
-            "@type": "LocationFeatureSpecification",
-            "name": "Accès direct à la plage",
-            "value": true
-          },
-          {
-            "@type": "LocationFeatureSpecification",
-            "name": "Terrasse privée",
-            "value": true
-          },
-          {
-            "@type": "LocationFeatureSpecification",
-            "name": "Jardin fleuri",
-            "value": true
-          },
-          {
-            "@type": "LocationFeatureSpecification",
-            "name": "Barbecue et plancha",
-            "value": true
-          },
-          {
-            "@type": "LocationFeatureSpecification",
-            "name": "Internet haut débit",
-            "value": true
-          },
-          {
-            "@type": "LocationFeatureSpecification",
-            "name": "Cuisine entièrement équipée",
-            "value": true
-          },
-          {
-            "@type": "LocationFeatureSpecification",
-            "name": "Bureau pour télétravail",
-            "value": true
-          }
-        ],
-        "numberOfRooms": 10,
-        "maximumAttendeeCapacity": 10,
-        "petsAllowed": false,
-        "tourBookingPage": fullBookUrl,
-      }
-
-
+const defaultCanonicalUrl = `${config.site.base_url}${Astro.url.pathname}`;
 ---
 
 <!doctype html>
@@ -221,7 +116,14 @@ const vacationRentalJsonLd = {
     </title>
 
     <!-- canonical url -->
-    {canonical && <link rel="canonical" href={canonical} item-prop="url" />}
+    {
+      //canonical && <link rel="canonical" href={canonical} item-prop="url" />}
+      canonical ? (
+        <link rel="canonical" href={canonical} item-prop="url" />
+      ) : (
+        <link rel="canonical" href={defaultCanonicalUrl} item-prop="url" />
+      )
+    }
 
     <!-- noindex robots -->
     {noindex && <meta name="robots" content="noindex,nofollow" />}
@@ -294,12 +196,7 @@ const vacationRentalJsonLd = {
     <meta name="twitter:card" content="summary_large_image" />
 
     <!-- JML add vacationrental here -->
-    <script 
-      type="application/ld+json"
-        set:html={JSON.stringify(vacationRentalJsonLd)}
-    />
-
-
+    <!-- {schemaVacationRental ? schemaVacationRental : ""}  -->
   </head>
   <body>
     <TwSizeIndicator />
