--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -53,8 +53,8 @@ const redirectionScript = `
 
 ---
 
-<Base meta_title={meta_title} description={description}> 
-  <head set:html={redirectionScript}></head>
+<Base meta_title={meta_title} description={description} schemaVacationRental={schemaVacationRental} set:html={redirectionScript}> 
+
   <!-- Banner -->
   <section class="section pt-14">
     <div class="container">
