--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -58,64 +58,38 @@ const language = lang || getLangFromUrl(Astro.url);
 const fullBookUrl = `${config.site.base_url}${config.book_now_button.link}`;
 
 const defaultCanonicalUrl = `${config.site.base_url}${Astro.url.pathname}`;
+
+// Define hreflang links based on the current language and URL structure
+// Fonction pour vérifier si l'URL doit exclure les hreflangs
+const pathname = Astro.url.pathname;
+const isExcludedPath = pathname.includes("/categories/") || pathname.includes("/tags/");
+
+// Liste des locales prises en charge
+const supportedLocales = ["en", "fr"];
+
+// Générer les balises hreflang uniquement si l'URL n'est pas exclue
+const hreflangLinks = !isExcludedPath
+  ? supportedLocales.map((locale) => {
+      // Remplace la locale existante dans le chemin par la locale actuelle
+      const localizedPath = pathname.replace(/^\/[a-z]{2}\//, `/${locale}/`);
+      return {
+        lang: locale,
+        url: `${config.site.base_url}${localizedPath}`,
+      };
+    })
+  : [];
+
 ---
 
 <!doctype html>
 <html lang={language}>
   <head>
-    <!-- favicon -->
-    <link rel="shortcut icon" href={config.site.favicon} />
-
-    <meta name="msapplication-TileColor" content="#000000" />
-    <meta
-      name="theme-color"
-      media="(prefers-color-scheme: light)"
-      content="#fff"
-    />
-    <meta
-      name="theme-color"
-      media="(prefers-color-scheme: dark)"
-      content="#000"
-    />
-    <meta name="generator" content={Astro.generator} />
+    <>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="author" content={config.metadata.meta_author} />    <meta name="generator" content={Astro.generator} />
 
-    <!-- google font css -->
-    <AstroFont
-      config={[
-        {
-          src: [],
-          preload: false,
-          display: "swap",
-          name: fontPrimary!,
-          fallback: "sans-serif",
-          cssVariable: "font-primary",
-          googleFontsURL: `https://fonts.googleapis.com/css2?family=${pf}&display=swap`,
-        },
-        {
-          src: [],
-          preload: false,
-          display: "swap",
-          name: fontSecondary!,
-          fallback: "sans-serif",
-          cssVariable: "font-secondary",
-          googleFontsURL: `https://fonts.googleapis.com/css2?family=${sf}&display=swap`,
-        },
-      ]}
-    />
-
-    <!-- responsive meta -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=5"
-    />
-
-    <!-- title -->
-    <title>
-      {plainify(meta_title ? meta_title : title ? title : config.site.title)}
-    </title>
-
-    <!-- canonical url -->
+    <!-- favicon --><link rel="shortcut icon" href={config.site.favicon} />
+     <!-- --><!-- canonical url -->
     {
       //canonical && <link rel="canonical" href={canonical} item-prop="url" />}
       canonical ? (
@@ -124,10 +98,17 @@ const defaultCanonicalUrl = `${config.site.base_url}${Astro.url.pathname}`;
         <link rel="canonical" href={defaultCanonicalUrl} item-prop="url" />
       )
     }
-
+       <!-- --><!-- Add hreflang links -->
+      {hreflangLinks.map(link => (
+        <link rel="alternate" hreflang={link.lang} href={link.url} />
+      ))}
     <!-- noindex robots -->
     {noindex && <meta name="robots" content="noindex,nofollow" />}
 
+     <!-- --><!-- title -->
+    <title>
+      {plainify(meta_title ? meta_title : title ? title : config.site.title)}
+    </title>
     <!-- meta-description -->
     <meta
       name="description"
@@ -136,19 +117,10 @@ const defaultCanonicalUrl = `${config.site.base_url}${Astro.url.pathname}`;
       )}
     />
 
-    <ViewTransitions />
 
-    <!-- author from config.json -->
-    <meta name="author" content={config.metadata.meta_author} />
 
-    <!-- og-title -->
-    <meta
-      property="og:title"
-      content={plainify(
-        meta_title ? meta_title : title ? title : config.site.title,
-      )}
-    />
-
+     <!-- --><!-- og-title -->
+    <meta property="og:title" content={plainify(meta_title ? meta_title : title ? title : config.site.title)}/>
     <!-- og-description -->
     <meta
       property="og:description"
@@ -156,13 +128,20 @@ const defaultCanonicalUrl = `${config.site.base_url}${Astro.url.pathname}`;
         description ? description : config.metadata.meta_description,
       )}
     />
+        <!-- og-image -->
+        <meta
+        property="og:image"
+        content={`${config.site.base_url}${
+          image ? image : config.metadata.meta_image
+        }`}
+      />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
       content={`${config.site.base_url}/${Astro.url.pathname.replace("/", "")}`}
     />
 
-    <!-- twitter-title -->
+     <!-- --><!-- twitter-title -->
     <meta
       name="twitter:title"
       content={plainify(
@@ -178,14 +157,6 @@ const defaultCanonicalUrl = `${config.site.base_url}${Astro.url.pathname}`;
       )}
     />
 
-    <!-- og-image -->
-    <meta
-      property="og:image"
-      content={`${config.site.base_url}${
-        image ? image : config.metadata.meta_image
-      }`}
-    />
-
     <!-- twitter-image -->
     <meta
       name="twitter:image"
@@ -195,8 +166,52 @@ const defaultCanonicalUrl = `${config.site.base_url}${Astro.url.pathname}`;
     />
     <meta name="twitter:card" content="summary_large_image" />
 
-    {schemaVacationRental && <Fragment set:html={schemaVacationRental} />}
-  
+     <!-- -->{schemaVacationRental && <Fragment set:html={schemaVacationRental} />}
+     <meta name="msapplication-TileColor" content="#000000" />
+     <meta
+       name="theme-color"
+       media="(prefers-color-scheme: light)"
+       content="#fff"
+     />
+     <meta
+       name="theme-color"
+       media="(prefers-color-scheme: dark)"
+       content="#000"
+     />
+ 
+     <!-- google font css -->
+     <AstroFont
+       config={[
+         {
+           src: [],
+           preload: false,
+           display: "swap",
+           name: fontPrimary!,
+           fallback: "sans-serif",
+           cssVariable: "font-primary",
+           googleFontsURL: `https://fonts.googleapis.com/css2?family=${pf}&display=swap`,
+         },
+         {
+           src: [],
+           preload: false,
+           display: "swap",
+           name: fontSecondary!,
+           fallback: "sans-serif",
+           cssVariable: "font-secondary",
+           googleFontsURL: `https://fonts.googleapis.com/css2?family=${sf}&display=swap`,
+         },
+       ]}
+     />
+ 
+     <!-- responsive meta -->
+     <meta
+       name="viewport"
+       content="width=device-width, initial-scale=1, maximum-scale=5"
+     />
+ 
+ 
+    <ViewTransitions />
+    </>
   </head>
   <body>
     <TwSizeIndicator />
