--- a/src/layouts/components/BlogCard.astro
+++ b/src/layouts/components/BlogCard.astro
@@ -27,7 +27,8 @@ data.slug = modifiedSlug;
 
 <div class="bg-body">
   {
-    image && (
+    image && ( 
+    <a href={slugSelector(`/${data.slug}`, lang)}>
       <ImageMod
         class="mb-6 w-full rounded"
         src={image}
@@ -36,6 +37,7 @@ data.slug = modifiedSlug;
         height={230}
         format="webp"
       />
+    </a>  
     )
   }
   <h4 class="mb-3">
